[gd_scene load_steps=50 format=3 uid="uid://dlfq34h176xw1"]

[ext_resource type="Script" path="res://gui/game.gd" id="1_5itbe"]
[ext_resource type="Shader" path="res://gui/palette_swap_2.gdshader" id="1_q1yve"]
[ext_resource type="FontFile" uid="uid://dssj30d3bo2i" path="res://gui/theme/Early GameBoy.ttf" id="2_sxpjs"]
[ext_resource type="Texture2D" uid="uid://dhoqc47ugm77q" path="res://gui/palettes/0.png" id="2_yvid3"]
[ext_resource type="Texture2D" uid="uid://dpmq0grq6v672" path="res://gui/palettes/1.png" id="3_7f80i"]
[ext_resource type="Texture2D" uid="uid://cf3frhqocbe2r" path="res://gui/theme/grid_border.png" id="3_sbjq2"]
[ext_resource type="Theme" uid="uid://buqgb4lyf7xxf" path="res://gui/theme/game_gui.tres" id="4_fctqf"]
[ext_resource type="Texture2D" uid="uid://cn2xp8m7g7dpn" path="res://gui/palettes/2.png" id="4_i5iec"]
[ext_resource type="Shader" path="res://gui/start_screen/ripple.gdshader" id="5_1v56d"]
[ext_resource type="Texture2D" uid="uid://b52wtme4illpx" path="res://gui/palettes/3.png" id="5_f0awd"]
[ext_resource type="AudioStream" uid="uid://bqd04mkkc3ruy" path="res://gui/music.wav" id="5_p6n3a"]
[ext_resource type="FontFile" uid="uid://bh6wa32yo0mj5" path="res://gui/theme/VCR_OSD_MONO.ttf" id="5_sgn86"]
[ext_resource type="PackedScene" uid="uid://by8mbw6ktpor4" path="res://gui/start_screen/animated_snake.tscn" id="6_fxmbh"]
[ext_resource type="AudioStream" uid="uid://yr8dcdqltkth" path="res://gui/countdown.wav" id="6_mbuu0"]
[ext_resource type="Texture2D" uid="uid://gublqvtxqici" path="res://gui/palettes/4.png" id="6_qjgj0"]
[ext_resource type="Texture2D" uid="uid://lfnbtt7f2qsv" path="res://gui/start_screen/melo_toni_presents.png" id="6_sad4r"]
[ext_resource type="Texture2D" uid="uid://dxfsncr3hp6jm" path="res://gui/palettes/5.png" id="7_qg635"]
[ext_resource type="AudioStream" uid="uid://d4i7nekxxyeh4" path="res://gui/game_over.wav" id="8_6lm63"]
[ext_resource type="Texture2D" uid="uid://dqjhj4aqgfeow" path="res://gui/palettes/6.png" id="8_ampj3"]
[ext_resource type="Texture2D" uid="uid://djkvvo7gug04s" path="res://gui/theme/tex_button_normal.png" id="8_qedsq"]
[ext_resource type="Texture2D" uid="uid://clnohryx8ktte" path="res://gui/theme/tex_button_disabled.png" id="9_fabpo"]
[ext_resource type="Texture2D" uid="uid://bhylsa4n1ib4q" path="res://gui/start_screen/nake.png" id="9_kaalf"]
[ext_resource type="Texture2D" uid="uid://ckqimgnw5jmmn" path="res://gui/palettes/7.png" id="9_rwau3"]
[ext_resource type="Texture2D" uid="uid://bweiflml2dakl" path="res://gui/palettes/8.png" id="10_arro0"]
[ext_resource type="AudioStream" uid="uid://bi78f0wygwxbv" path="res://gui/start_screen/start_sfx.wav" id="10_dedld"]
[ext_resource type="Texture2D" uid="uid://cvrqpukkprlb0" path="res://gui/theme/tex_button_focus.png" id="10_li0bs"]
[ext_resource type="AudioStream" uid="uid://n3sa6a4fp6ne" path="res://gui/start_screen/start_music.wav" id="11_8wk6b"]
[ext_resource type="Texture2D" uid="uid://ngjnxwists47" path="res://gui/palettes/9.png" id="11_81ibe"]
[ext_resource type="Texture2D" uid="uid://bld3juclnchyi" path="res://gui/palettes/10.png" id="12_3h7rr"]
[ext_resource type="Texture2D" uid="uid://cyhmhd6hn3mdt" path="res://gui/palettes/11.png" id="13_8jiw3"]
[ext_resource type="Texture2D" uid="uid://bqjwxdejglpiw" path="res://gui/palettes/18.png" id="14_bp1tu"]
[ext_resource type="Texture2D" uid="uid://nge44e2jmdsp" path="res://gui/palettes/12.png" id="14_lhsq2"]
[ext_resource type="Texture2D" uid="uid://d0s0wrjtp50jp" path="res://gui/palettes/13.png" id="15_75wuu"]
[ext_resource type="Texture2D" uid="uid://c35nw52gcu1ab" path="res://gui/palettes/14.png" id="16_3isve"]
[ext_resource type="Texture2D" uid="uid://p2fr4lbc534k" path="res://gui/palettes/15.png" id="17_n4n10"]
[ext_resource type="Texture2D" uid="uid://bn62mi32r1uhv" path="res://gui/palettes/16.png" id="18_40y3k"]
[ext_resource type="Texture2D" uid="uid://ch505eh78fv27" path="res://gui/palettes/17.png" id="19_2ss2e"]
[ext_resource type="AudioStream" uid="uid://cxyee8lssuvct" path="res://gui/menu_focus.wav" id="19_maqun"]
[ext_resource type="AudioStream" uid="uid://4a1tgnxnrbyy" path="res://gui/menu_increase.wav" id="20_knkxg"]
[ext_resource type="AudioStream" uid="uid://b7j4qsximwyer" path="res://gui/menu_decrease.wav" id="21_8e3nx"]
[ext_resource type="AudioStream" uid="uid://dh5qj75ck1m0x" path="res://gui/menu_select.wav" id="22_5x2sy"]
[ext_resource type="AudioStream" uid="uid://osusb1qqqa0y" path="res://gui/menu_exit.wav" id="23_nuvkv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvj6u"]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yn6n4"]
content_margin_left = 8.0
content_margin_top = 8.0
texture = ExtResource("3_sbjq2")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8yx80"]
shader = ExtResource("5_1v56d")
shader_parameter/speed = 2.0
shader_parameter/width = 0.25
shader_parameter/height = 4.0

[sub_resource type="Animation" id="Animation_j0had"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeIn:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 96)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeIn2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_mbweu"]
resource_name = "fade_in"
length = 8.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeIn:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 1.6, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.580392), Color(0, 0, 0, 0.580392), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6, 7.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(32, 144), Vector2(32, 144), Vector2(32, 96)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeIn2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.6, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hu3po"]
_data = {
"RESET": SubResource("Animation_j0had"),
"fade_in": SubResource("Animation_mbweu")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o3f2d"]
shader = ExtResource("1_q1yve")
shader_parameter/baseline_alpha = 0.1
shader_parameter/invert = false
shader_parameter/palette = ExtResource("14_bp1tu")

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_5itbe")
palettes = [ExtResource("2_yvid3"), ExtResource("3_7f80i"), ExtResource("4_i5iec"), ExtResource("5_f0awd"), ExtResource("6_qjgj0"), ExtResource("7_qg635"), ExtResource("8_ampj3"), ExtResource("9_rwau3"), ExtResource("10_arro0"), ExtResource("11_81ibe"), ExtResource("12_3h7rr"), ExtResource("13_8jiw3"), ExtResource("14_lhsq2"), ExtResource("15_75wuu"), ExtResource("16_3isve"), ExtResource("17_n4n10"), ExtResource("18_40y3k"), ExtResource("19_2ss2e"), ExtResource("14_bp1tu")]

[node name="InGameGUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 144.0

[node name="Backdrop" type="ColorRect" parent="InGameGUI"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 144.0
color = Color(0.333333, 0.333333, 0.333333, 1)

[node name="ScoreText" type="RichTextLabel" parent="InGameGUI"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1.0
offset_top = 7.0
offset_right = 64.0
offset_bottom = 17.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_sxpjs")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[left]0[/left]"
fit_content = true
autowrap_mode = 0

[node name="ScoreLabel" type="RichTextLabel" parent="InGameGUI"]
layout_mode = 2
offset_left = 1.0
offset_top = -1.0
offset_right = 64.0
offset_bottom = 9.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_sxpjs")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[left]Score[/left]"
fit_content = true
autowrap_mode = 0

[node name="RecordText" type="RichTextLabel" parent="InGameGUI"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 80.0
offset_top = 7.0
offset_right = 161.0
offset_bottom = 17.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_sxpjs")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[right]0[/right]"
fit_content = true
autowrap_mode = 0

[node name="RecordLabel" type="RichTextLabel" parent="InGameGUI"]
layout_mode = 2
offset_left = 80.0
offset_top = -1.0
offset_right = 161.0
offset_bottom = 9.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_sxpjs")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[right]record[/right]"
fit_content = true
autowrap_mode = 0

[node name="CountdownLabel" type="RichTextLabel" parent="InGameGUI"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 70.0
offset_top = -4.0
offset_right = 90.0
offset_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/normal_font = ExtResource("5_sgn86")
theme_override_font_sizes/normal_font_size = 21
theme_override_styles/normal = SubResource("StyleBoxFlat_vvj6u")
text = "3"
fit_content = true
autowrap_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="InGameGUI"]
layout_mode = 2
offset_top = 16.0
offset_right = 160.0
offset_bottom = 144.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_yn6n4")

[node name="SubViewportContainer" type="SubViewportContainer" parent="InGameGUI/PanelContainer"]
process_mode = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="GridViewport" type="SubViewport" parent="InGameGUI/PanelContainer/SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(144, 112)
render_target_update_mode = 4

[node name="InGameMusicPlayer" type="AudioStreamPlayer" parent="InGameGUI"]
unique_name_in_owner = true
stream = ExtResource("5_p6n3a")
bus = &"Music"

[node name="CountdownPlayer" type="AudioStreamPlayer" parent="InGameGUI"]
unique_name_in_owner = true
stream = ExtResource("6_mbuu0")
bus = &"Music"

[node name="PauseMenu" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 152.0
offset_bottom = 136.0
theme = ExtResource("4_fctqf")

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 104.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 112.0
offset_bottom = 96.0

[node name="PausedLabel" type="RichTextLabel" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/normal_font = ExtResource("5_sgn86")
theme_override_font_sizes/normal_font_size = 21
text = "PAUSED"
fit_content = true
autowrap_mode = 0

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "resume"

[node name="PauseNewGameButton" type="Button" parent="PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "new game"

[node name="PauseSettingsButton" type="Button" parent="PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "settings"

[node name="PauseQuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "quit"

[node name="GameOverMenu" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 152.0
offset_bottom = 136.0
theme = ExtResource("4_fctqf")

[node name="Panel" type="Panel" parent="GameOverMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 136.0
offset_bottom = 96.0

[node name="GameOverLabel" type="RichTextLabel" parent="GameOverMenu"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 16.0
offset_top = 24.0
offset_right = 128.0
offset_bottom = 43.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/normal_font = ExtResource("5_sgn86")
theme_override_font_sizes/normal_font_size = 21
bbcode_enabled = true
text = "[center]GAME OVER"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 112.0
offset_bottom = 88.0

[node name="GameOverNewGameButton" type="Button" parent="GameOverMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "new game"

[node name="GameOverQuitButton" type="Button" parent="GameOverMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "quit"

[node name="GameOverMusicPlayer" type="AudioStreamPlayer" parent="GameOverMenu"]
unique_name_in_owner = true
stream = ExtResource("8_6lm63")
bus = &"Music"

[node name="StartMenu" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="StartMenu"]
layout_mode = 2
offset_right = 160.0
offset_bottom = 144.0
color = Color(0, 0, 0, 1)

[node name="TextureRect2" type="TextureRect" parent="StartMenu"]
layout_mode = 0
offset_left = 72.0
offset_top = 44.0
offset_right = 128.0
offset_bottom = 84.0
texture = ExtResource("9_kaalf")

[node name="CenterContainer" type="CenterContainer" parent="StartMenu"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 144.0

[node name="TextureRect" type="TextureRect" parent="StartMenu"]
material = SubResource("ShaderMaterial_8yx80")
layout_mode = 0
offset_right = 123.0
offset_bottom = 15.0
texture = ExtResource("6_sad4r")

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = 96.0
offset_right = 128.0
offset_bottom = 144.0
theme = ExtResource("4_fctqf")

[node name="StartNewGameButton" type="Button" parent="StartMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "new game"

[node name="StartSettingsButton" type="Button" parent="StartMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "settings"

[node name="StartQuitButton" type="Button" parent="StartMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "quit"

[node name="AnimatedSnake" parent="StartMenu" instance=ExtResource("6_fxmbh")]
unique_name_in_owner = true
position = Vector2(48, 56)

[node name="FadeIn" type="ColorRect" parent="StartMenu"]
layout_mode = 0
offset_top = 16.0
offset_right = 160.0
offset_bottom = 98.0
color = Color(0, 0, 0, 1)

[node name="FadeIn2" type="ColorRect" parent="StartMenu"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 16.0
color = Color(0, 0, 0, 1)

[node name="StartAnimation" type="AnimationPlayer" parent="StartMenu"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_hu3po")
}

[node name="StartSFXPlayer" type="AudioStreamPlayer" parent="StartMenu"]
unique_name_in_owner = true
stream = ExtResource("10_dedld")
bus = &"Music"

[node name="StartMusicPlayer" type="AudioStreamPlayer" parent="StartMenu"]
unique_name_in_owner = true
stream = ExtResource("11_8wk6b")
bus = &"Music"

[node name="SettingsMenu" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 144.0
theme = ExtResource("4_fctqf")

[node name="Panel" type="Panel" parent="SettingsMenu"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 144.0

[node name="GridContainer" type="GridContainer" parent="SettingsMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 152.0
offset_bottom = 136.0
columns = 2

[node name="RichTextLabel" type="RichTextLabel" parent="SettingsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "palette"
fit_content = true
autowrap_mode = 0

[node name="PaletteAdjuster" type="HBoxContainer" parent="SettingsMenu/GridContainer"]
layout_mode = 2
alignment = 1

[node name="PaletteDecreaseButton" type="TextureButton" parent="SettingsMenu/GridContainer/PaletteAdjuster"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_right = NodePath("../PaletteIncreaseButton")
button_mask = 0
texture_normal = ExtResource("8_qedsq")
texture_pressed = ExtResource("8_qedsq")
texture_disabled = ExtResource("9_fabpo")
texture_focused = ExtResource("10_li0bs")
flip_h = true

[node name="PaletteNumberLabel" type="RichTextLabel" parent="SettingsMenu/GridContainer/PaletteAdjuster"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
text = "00"
fit_content = true
autowrap_mode = 0

[node name="PaletteIncreaseButton" type="TextureButton" parent="SettingsMenu/GridContainer/PaletteAdjuster"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath("../PaletteDecreaseButton")
texture_normal = ExtResource("8_qedsq")
texture_pressed = ExtResource("8_qedsq")
texture_disabled = ExtResource("9_fabpo")
texture_focused = ExtResource("10_li0bs")

[node name="RichTextLabel2" type="RichTextLabel" parent="SettingsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "invert colors"
fit_content = true
autowrap_mode = 0

[node name="InvertCheckBox" type="CheckBox" parent="SettingsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 2

[node name="RichTextLabel3" type="RichTextLabel" parent="SettingsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "music vol"
fit_content = true
autowrap_mode = 0

[node name="MusicAduster" type="HBoxContainer" parent="SettingsMenu/GridContainer"]
layout_mode = 2
alignment = 1

[node name="MusicDecreaseButton" type="TextureButton" parent="SettingsMenu/GridContainer/MusicAduster"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_right = NodePath("../MusicIncreaseButton")
button_mask = 0
texture_normal = ExtResource("8_qedsq")
texture_pressed = ExtResource("8_qedsq")
texture_disabled = ExtResource("9_fabpo")
texture_focused = ExtResource("10_li0bs")
flip_h = true

[node name="MusicNumberLabel" type="RichTextLabel" parent="SettingsMenu/GridContainer/MusicAduster"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
text = "10"
fit_content = true
autowrap_mode = 0

[node name="MusicIncreaseButton" type="TextureButton" parent="SettingsMenu/GridContainer/MusicAduster"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath("../MusicDecreaseButton")
texture_normal = ExtResource("8_qedsq")
texture_pressed = ExtResource("8_qedsq")
texture_disabled = ExtResource("9_fabpo")
texture_focused = ExtResource("10_li0bs")

[node name="RichTextLabel4" type="RichTextLabel" parent="SettingsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "sfx vol"
fit_content = true
autowrap_mode = 0

[node name="SFXAdjuster" type="HBoxContainer" parent="SettingsMenu/GridContainer"]
layout_mode = 2
alignment = 1

[node name="SFXDecreaseButton" type="TextureButton" parent="SettingsMenu/GridContainer/SFXAdjuster"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_right = NodePath("../SFXIncreaseButton")
button_mask = 0
texture_normal = ExtResource("8_qedsq")
texture_pressed = ExtResource("8_qedsq")
texture_disabled = ExtResource("9_fabpo")
texture_focused = ExtResource("10_li0bs")
flip_h = true

[node name="SFXNumberLabel" type="RichTextLabel" parent="SettingsMenu/GridContainer/SFXAdjuster"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
text = "10"
fit_content = true
autowrap_mode = 0

[node name="SFXIncreaseButton" type="TextureButton" parent="SettingsMenu/GridContainer/SFXAdjuster"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath("../SFXDecreaseButton")
texture_normal = ExtResource("8_qedsq")
texture_pressed = ExtResource("8_qedsq")
texture_disabled = ExtResource("9_fabpo")
texture_focused = ExtResource("10_li0bs")

[node name="RichTextLabel5" type="RichTextLabel" parent="SettingsMenu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "game speed"
fit_content = true
autowrap_mode = 0

[node name="SpeedAdjuster" type="HBoxContainer" parent="SettingsMenu/GridContainer"]
layout_mode = 2
alignment = 1

[node name="SpeedDecreaseButton" type="TextureButton" parent="SettingsMenu/GridContainer/SpeedAdjuster"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_right = NodePath("../SpeedIncreaseButton")
button_mask = 0
texture_normal = ExtResource("8_qedsq")
texture_pressed = ExtResource("8_qedsq")
texture_disabled = ExtResource("9_fabpo")
texture_focused = ExtResource("10_li0bs")
flip_h = true

[node name="SpeedNumberLabel" type="RichTextLabel" parent="SettingsMenu/GridContainer/SpeedAdjuster"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
text = "1"
fit_content = true
autowrap_mode = 0

[node name="SpeedIncreaseButton" type="TextureButton" parent="SettingsMenu/GridContainer/SpeedAdjuster"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath("../SpeedDecreaseButton")
texture_normal = ExtResource("8_qedsq")
texture_pressed = ExtResource("8_qedsq")
texture_disabled = ExtResource("9_fabpo")
texture_focused = ExtResource("10_li0bs")

[node name="Control" type="Control" parent="SettingsMenu/GridContainer"]
layout_mode = 2

[node name="ExitSettingsButton" type="Button" parent="SettingsMenu/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " exit"

[node name="UserGestureSplash" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UserGestureSplash"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 144.0
color = Color(0, 0, 0, 1)

[node name="SplashText" type="RichTextLabel" parent="UserGestureSplash"]
offset_top = 67.0
offset_right = 160.0
offset_bottom = 80.0
theme_override_fonts/normal_font = ExtResource("2_sxpjs")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]press space to start"
fit_content = true

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="PaletteSwapper" type="ColorRect" parent="BackBufferCopy"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_o3f2d")
offset_right = 160.0
offset_bottom = 144.0
color = Color(1, 1, 1, 0)

[node name="GUIAudioStreams" type="Node" parent="."]

[node name="FocusSoundPlayer" type="AudioStreamPlayer" parent="GUIAudioStreams"]
unique_name_in_owner = true
stream = ExtResource("19_maqun")
bus = &"SFX"

[node name="IncreaseSoundPlayer" type="AudioStreamPlayer" parent="GUIAudioStreams"]
unique_name_in_owner = true
stream = ExtResource("20_knkxg")
bus = &"SFX"

[node name="DecreaseSoundPlayer" type="AudioStreamPlayer" parent="GUIAudioStreams"]
unique_name_in_owner = true
stream = ExtResource("21_8e3nx")
bus = &"SFX"

[node name="SelectSoundPlayer" type="AudioStreamPlayer" parent="GUIAudioStreams"]
unique_name_in_owner = true
stream = ExtResource("22_5x2sy")
bus = &"SFX"

[node name="ExitSoundPlayer" type="AudioStreamPlayer" parent="GUIAudioStreams"]
unique_name_in_owner = true
stream = ExtResource("23_nuvkv")
bus = &"SFX"

[connection signal="pressed" from="SettingsMenu/GridContainer/PaletteAdjuster/PaletteDecreaseButton" to="." method="_on_palette_decrease_button_pressed"]
[connection signal="pressed" from="SettingsMenu/GridContainer/PaletteAdjuster/PaletteIncreaseButton" to="." method="_on_palette_increase_button_pressed"]
[connection signal="toggled" from="SettingsMenu/GridContainer/InvertCheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="SettingsMenu/GridContainer/MusicAduster/MusicDecreaseButton" to="." method="_on_music_decrease_button_pressed"]
[connection signal="pressed" from="SettingsMenu/GridContainer/MusicAduster/MusicIncreaseButton" to="." method="_on_music_increase_button_pressed"]
[connection signal="pressed" from="SettingsMenu/GridContainer/SFXAdjuster/SFXDecreaseButton" to="." method="_on_sfx_decrease_button_pressed"]
[connection signal="pressed" from="SettingsMenu/GridContainer/SFXAdjuster/SFXIncreaseButton" to="." method="_on_sfx_increase_button_pressed"]
[connection signal="pressed" from="SettingsMenu/GridContainer/SpeedAdjuster/SpeedDecreaseButton" to="." method="_on_speed_decrease_button_pressed"]
[connection signal="pressed" from="SettingsMenu/GridContainer/SpeedAdjuster/SpeedIncreaseButton" to="." method="_on_speed_increase_button_pressed"]
[connection signal="pressed" from="SettingsMenu/GridContainer/ExitSettingsButton" to="." method="close_settings_menu"]
